Clean up for deployment

--- a/notebooks/master/Jet Substructure.ipynb
+++ b/notebooks/master/Jet Substructure.ipynb
@@ -92,6 +92,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
+    "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/QCD_Pt_470to600.txt \\\n",
+    "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_470to600.root \\\n",
+    "    --maxevents=2000 \\\n",
+    "    --maxjets=4 \\\n",
+    "    --maxFiles 2\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,15 +135,18 @@
     "h_mSDpuppiAK8 = f.Get(\"h_mSDpuppiAK8\")\n",
     "\n",
     "h_mAK8.SetLineColor(ROOT.kBlack)\n",
-    "h_mAK8.SetLineWidth(2)\n",
+    "h_mAK8.SetLineWidth(1)\n",
     "h_msoftdropAK8.SetLineColor(ROOT.kRed-4)\n",
     "h_msoftdropAK8.SetLineStyle(3)\n",
+    "h_msoftdropAK8.SetLineWidth(1)\n",
     "h_mprunedAK8.SetLineColor(ROOT.kMagenta-4) \n",
     "h_mprunedAK8.SetLineStyle(4) \n",
     "h_mpuppiAK8.SetLineColor(ROOT.kGreen)\n",
     "h_mpuppiAK8.SetLineStyle(3)\n",
+    "h_mpuppiAK8.SetLineWidth(1)\n",
     "h_mSDpuppiAK8.SetLineColor(ROOT.kAzure)\n",
     "h_mSDpuppiAK8.SetLineStyle(2)\n",
+    "h_mSDpuppiAK8.SetLineWidth(3)\n",
     "\n",
     "legend = ROOT.TLegend(0.6, 0.6, 0.88, 0.88)\n",
     "legend.SetFillColor(0)\n",
@@ -197,19 +215,29 @@
     "    for iprocess, process in enumerate(processes):\n",
     "        #print(process)\n",
     "        hists[process] = hist_files[process].Get(\"h_{}\".format(variable))\n",
+    "        if not hists[process]:\n",
+    "            print \"ERROR : didn't find histogram {} in file {}\".format(\"h_{}\".format(variable), hist_files[process].GetPath())\n",
     "        hists[process].SetDirectory(0)\n",
     "        hists[process].SetLineColor(iprocess+1)\n",
     "        hists[process].Rebin(2)\n",
-    "        hists[process].Scale(1. / hists[process].Integral())\n",
+    "        if hists[process].Integral() > 0:\n",
+    "            hists[process].Scale(1. / hists[process].Integral())\n",
     "    \n",
-    "    hists[processes[0]].SetMaximum(1.2 * max([hists[process].GetMaximum() for process in processes]))\n",
     "    # Dummy histogram for drawing axes on TCanvas\n",
     "    #hframe = ROOT.TH1F(\"hframe\", \"hframe\", hists[\"tt\"].GetNbinsX(), hists[\"tt\"].GetXaxis().GetXmin(), hists[\"tt\"].GetXaxis().GetXmax())\n",
     "    #hframe.SetDirectory(0)\n",
     "    #hframe.GetXaxis().SetTitle(variable)\n",
     "    #hframe.SetMinimum(0.)\n",
     "    #hframe.SetMaximum(1.2 * max([hists[process].GetMaximum() for process in [\"tt\", \"rsg\", \"wqq\"]]))\n",
-    "    \n",
+    "\n",
+    "    if variable == \"ak8_N2_beta1\":\n",
+    "        hists[processes[0]].GetXaxis().SetRangeUser(0., 0.5)\n",
+    "    elif variable == \"logrhoRatioAK8\":\n",
+    "        for process in processes:\n",
+    "            hists[process].Rebin(5)\n",
+    "\n",
+    "    hists[processes[0]].SetMaximum(1.2 * max([hists[process].GetMaximum() for process in processes]))\n",
+    "\n",
     "    legend = ROOT.TLegend(0.15, 0.65, 0.4, 0.85)\n",
     "    legend.SetFillColor(0)\n",
     "    legend.SetFillStyle(0)\n",
@@ -275,7 +303,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compareHistogram('tau32AK8', processes=[\"rsg\", \"wqq\", \"qcd\"])"
+    "compareHistogram('tau32AK8', processes=[\"rsg\", \"qcd\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compareHistogram('tau32AK8_pt450', processes=[\"rsg\", \"qcd\"])"
    ]
   },
   {
@@ -302,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compareHistogram( 'ak8_N3_beta1', processes=[\"rsg\", \"wqq\", \"qcd\"] )"
+    "compareHistogram( 'ak8_N3_beta1_pt450', processes=[\"rsg\", \"qcd\"] )"
    ]
   },
   {
@@ -319,9 +356,10 @@
     "# $\\rho$ parameter\n",
     "A useful variable for massive, fat jets is the QCD scaling parameter $\\rho$, defined as:\n",
     "\n",
-    "$\\rho=m^2/(p_{\\mathrm{T}}R)^2$.\n",
+    "$\\rho=\\log(m^2/(p_{\\mathrm{T}}R)^2)$.\n",
     "\n",
-    "(Sometimes $\\rho$ is defined as the logarithm of this quantity). One useful feature of this variable is that QCD jet mass grows with $p_{\\mathrm{T}}$, i.e. the two quantities are strongly correlated, while $\\rho$ is much less correlated with $p_{\\mathrm{T}}$.\n"
+    "(Sometimes $\\rho$ is defined without the log). One useful feature of this variable is that QCD jet mass grows with $p_{\\mathrm{T}}$, i.e. the two quantities are strongly correlated, while $\\rho$ is much less correlated with $p_{\\mathrm{T}}$.\n",
+    "\n"
    ]
   },
   {
@@ -330,31 +368,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compareHistogram( 'rhoRatioAK8' )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compareHistogram( 'logrhoRatioAK8' )"
+    "compareHistogram( 'logrhoRatioAK8' )\n",
+    "#compareHistogram( 'rhoRatioAK8' )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In which cases do you think the $\\rho$ variable can be used?"
+    "In which cases do you think the $\\rho$ variable can be used? \n",
+    "\n",
+    "<details>\n",
+    "<summary>\n",
+    "    <font color='blue'>Click to see more.</font>\n",
+    "</summary>\n",
+    "The following two plots show what QCD events look like in different $p_{T}$ ranges. It's clear that the mass depends very strongly on $p_{T}$, while the $\\rho$ shape is fairly constant vs. $p_{T}$ (ignoring $\\rho<7$ or so, which is the non-perturbative region). Having a stable shape is useful when studying QCD across a wide $p_{T}$ range.\n",
+    "<img src=\"../files/qcdpt_mass.png\" width=600px/>\n",
+    "<img src=\"../files/qcdpt_rho.png\" width=600px/>\n",
+    "</details>\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
