Fix jet areas answer plot

--- a/notebooks/master/Jet Types and Algorithms.ipynb
+++ b/notebooks/master/Jet Types and Algorithms.ipynb
@@ -221,7 +221,7 @@
     "</summary>\n",
     "The area plot should look like this:\n",
     "\n",
-    "<img src=\"files/jet_areas.png\" width=400px/>\n",
+    "![Basic jet kinematics](../files/jet_areas.png)",
     "\n",
     "The histograms indeed peak at the expected value of $\\pi R^2$. \n",
     "</details>\n"
