Updates for the 2021 Jet 2 HATS

--- a/notebooks/master/Jet Energy Corrections - V2.ipynb
+++ b/notebooks/master/Jet Energy Corrections - V2.ipynb
@@ -40,6 +40,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "r.enableJSVis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Open a file\n",
     "f = r.TFile(\"JECNtuple_MiniAOD.root\")\n",
     "# Look at its contents\n",
@@ -70,24 +79,24 @@
     "\n",
     "#Settings for each of the pads in the canvas\n",
     "settingsTMP = {'response' : (1,0.0,2.0,0.0,0.12,\"Response (p_{T}^{RECO}/p_{T}^{GEN})\",\"a.u.\",False),\n",
-    "\t\t\t   'pt'       : (2,10.0,1000.0,0.0,0.21,\"p_{T}^{RECO}\",\"a.u.\",True),\n",
-    "\t\t\t   'eta' \t  : (3,-5,5,0.0,0.1,\"#eta\",\"a.u.\",False),\n",
-    "\t\t\t   'phi' \t  : (4,-3.14159,3.14159,0.0,0.04,\"#phi\",\"a.u.\",False)\n",
-    "\t\t\t   }\n",
+    "               'pt'       : (2,10.0,1000.0,0.0,0.21,\"p_{T}^{RECO}\",\"a.u.\",True),\n",
+    "               'eta'      : (3,-5,5,0.0,0.1,\"#eta\",\"a.u.\",False),\n",
+    "               'phi'      : (4,-3.14159,3.14159,0.0,0.04,\"#phi\",\"a.u.\",False)\n",
+    "               }\n",
     "settings = OrderedDict(sorted(settingsTMP.items(), key=lambda x:x[1], reverse=False))\n",
     "\n",
     "# Create and draw the canvas\n",
     "frames = []\n",
     "for f, s in enumerate(settings) :\n",
-    "\tframe = r.TH1D()\n",
-    "\tframes.append(frame)\n",
-    "\tframes[f].GetXaxis().SetLimits(settings[s][1],settings[s][2])\n",
-    "\tframes[f].GetYaxis().SetRangeUser(settings[s][3],settings[s][4])\n",
-    "\tframes[f].GetXaxis().SetTitle(settings[s][5])\n",
-    "\tframes[f].GetYaxis().SetTitle(settings[s][6])\n",
-    "\tif settings[s][6] :\n",
-    "\t\tframes[f].GetXaxis().SetMoreLogLabels()\n",
-    "\t\tframes[f].GetXaxis().SetNoExponent()\n",
+    "    frame = r.TH1D()\n",
+    "    frames.append(frame)\n",
+    "    frames[f].GetXaxis().SetLimits(settings[s][1],settings[s][2])\n",
+    "    frames[f].GetYaxis().SetRangeUser(settings[s][3],settings[s][4])\n",
+    "    frames[f].GetXaxis().SetTitle(settings[s][5])\n",
+    "    frames[f].GetYaxis().SetTitle(settings[s][6])\n",
+    "    if settings[s][6] :\n",
+    "        frames[f].GetXaxis().SetMoreLogLabels()\n",
+    "        frames[f].GetXaxis().SetNoExponent()\n",
     "c = tdrCanvasMultipad(\"c\",frames,14,11,2,2)\n",
     "\n",
     "# Open the ROOT file with the ntuple\n",
@@ -98,10 +107,10 @@
     "jetTypes = OrderedDict([(\"PF\" , r.kBlack),(\"PFCHS\" , r.kRed),(\"PFPUPPI\" , r.kGreen)])\n",
     "corrections = OrderedDict([(\"Uncorrected\" , r.kDotted),(\"L1\" , r.kDashed),(\"L1L2L3\" , r.kSolid)])\n",
     "hsettingsTMP = {'response' : (1,80,0,2),\n",
-    "\t\t\t    'pt'       : (2,200,0,1000),\n",
-    "\t\t\t    'eta' \t   : (3,50,-5,5),\n",
-    "\t\t\t    'phi' \t   : (4,50,-3.14159,3.14159),\n",
-    "\t\t\t    }\n",
+    "                'pt'       : (2,200,0,1000),\n",
+    "                'eta'      : (3,50,-5,5),\n",
+    "                'phi'      : (4,50,-3.14159,3.14159),\n",
+    "                }\n",
     "hsettings = OrderedDict(sorted(hsettingsTMP.items(), key=lambda x:x[1], reverse=False))\n",
     "nsigma = 1.0\n",
     "\n",
@@ -117,7 +126,7 @@
     "    legends[legname].SetTextSize(0.035)\n",
     "\n",
     "    for jt in jetTypes:\n",
-    "        if not doPUPPI and jt == \"PFPuppi\":\n",
+    "        if not doPUPPI and (jt == \"PFPuppi\" or jt == \"PFPUPPI\"):\n",
     "            continue\n",
     "        if not f.GetDirectory(alg_size+jt+\"L1L2L3\"):\n",
     "            continue\n",
