--- a/notebooks/master/Pileup.ipynb
+++ b/notebooks/master/Pileup.ipynb
@@ -180,7 +180,7 @@
    "source": [
     "%%capture\n",
     "%%bash\n",
-    "python ../python/pileupCorr.py -j ../data/Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.txt -l ../data/pileup_latest.txt -b 100"
+    "python ../../python/pileupCorr.py -j ../../data/Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.txt -l ../../data/pileup_latest.txt -b 100"
    ]
   },
   {
@@ -189,18 +189,151 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inf = r.TFile(\"PileupHistograms.root\",\"READ\")\n",
+    "import array, math\n",
+    "def DtoF(file,get):\n",
+    "    hD = file.Get(get)\n",
+    "    hF = r.TH1F()\n",
+    "    hD.Copy(hF)\n",
+    "    return hF\n",
+    "\n",
+    "def hold_pointers_to_implicit_members( obj ):\n",
+    "  if not hasattr( obj, '_implicit_members' ):\n",
+    "    obj._implicit_members = []\n",
+    "  if hasattr( obj, 'GetListOfPrimitives' ):\n",
+    "    for prim in obj.GetListOfPrimitives():\n",
+    "      obj._implicit_members.append( prim )\n",
+    "\n",
+    "'''\n",
+    "Interactive:\n",
     "from Analysis.JMEDAS.pileupCorr import *\n",
+    "c = MakeCanvas(filename=\"../data/PileupHistograms.root\")\n",
+    "c.Draw()\n",
+    "'''\n",
+    "def MakeCanvas(dataHists = [], MCHist = r.TH1F(), weightHists = [], filename = \"\"):\n",
+    "    if filename!='':\n",
+    "        f = r.TFile.Open(filename,\"READ\")\n",
+    "        dataHists.append(DtoF(f,\"data_pu_central\"))\n",
+    "        dataHists[-1].SetDirectory(None)\n",
+    "        dataHists.append(DtoF(f,\"data_pu_up\"))\n",
+    "        dataHists[-1].SetDirectory(None)\n",
+    "        dataHists.append(DtoF(f,\"data_pu_down\"))\n",
+    "        dataHists[-1].SetDirectory(None)\n",
+    "        MCHist = DtoF(f,\"hMC25ns\")\n",
+    "        MCHist.SetDirectory(None)\n",
+    "        weightHists.append(DtoF(f,\"pu_weights_central\"))\n",
+    "        weightHists[-1].SetDirectory(None)\n",
+    "        weightHists.append(DtoF(f,\"pu_weights_up\"))\n",
+    "        weightHists[-1].SetDirectory(None)\n",
+    "        weightHists.append(DtoF(f,\"pu_weights_down\"))\n",
+    "        weightHists[-1].SetDirectory(None)\n",
+    "\n",
+    "    setTDRStyle()\n",
+    "\n",
+    "    frame = r.TH1D()\n",
+    "    frame.GetXaxis().SetLimits(0,100)\n",
+    "    frame.GetYaxis().SetRangeUser(1e-11,1e4)\n",
+    "    frame.GetXaxis().SetTitle(\"#mu\")\n",
+    "    frame.GetYaxis().SetTitle(\"Weights / a.u.\")\n",
+    "\n",
+    "    c = tdrCanvas(\"pileupCanvas\",frame,14,11,True)\n",
+    "    c.cd()\n",
+    "    c.SetLogy()\n",
+    "\n",
+    "    #Reweight the MC histogram\n",
+    "    MCHist_reweighted = MCHist.Clone(\"hMC25ns_reweighted\")\n",
+    "    MCHist_reweighted.SetDirectory(None)\n",
+    "    for b in xrange(1,int(MCHist.GetNbinsX()+1)):\n",
+    "        MCHist_reweighted.SetBinContent(b,MCHist_reweighted.GetBinContent(b)*weightHists[0].GetBinContent(b))\n",
+    "\n",
+    "    #Make TGraphAsymmErrors for the statistical+systematic error bands\n",
+    "    #First up is for the data histograms\n",
+    "    x       = array.array('f',[])\n",
+    "    y       = array.array('f',[])\n",
+    "    ex_up   = array.array('f',[])\n",
+    "    ex_down = array.array('f',[])\n",
+    "    ey_up   = array.array('f',[])\n",
+    "    ey_down = array.array('f',[])\n",
+    "    for b in xrange(1,int(dataHists[0].GetNbinsX()+1)):\n",
+    "        x.append(dataHists[0].GetBinCenter(b))\n",
+    "        y.append(dataHists[0].GetBinContent(b))\n",
+    "        ex_up.append(0.5)\n",
+    "        ex_down.append(0.5)\n",
+    "        if dataHists[1].GetBinContent(b) > dataHists[0].GetBinContent(b):\n",
+    "            ey_up.append(math.sqrt((dataHists[1].GetBinContent(b)-dataHists[0].GetBinContent(b))**2+(dataHists[0].GetBinError(b))**2))\n",
+    "            ey_down.append(math.sqrt((dataHists[0].GetBinContent(b)-dataHists[2].GetBinContent(b))**2+(dataHists[0].GetBinError(b))**2))\n",
+    "        else:\n",
+    "            ey_up.append(math.sqrt((dataHists[2].GetBinContent(b)-dataHists[0].GetBinContent(b))**2+(dataHists[0].GetBinError(b))**2))\n",
+    "            ey_down.append(math.sqrt((dataHists[0].GetBinContent(b)-dataHists[1].GetBinContent(b))**2+(dataHists[0].GetBinError(b))**2))\n",
+    "    errorBandData = r.TGraphAsymmErrors(len(x)-1,x,y,ex_down,ex_up,ey_down,ey_up)\n",
+    "\n",
+    "    #Then we do the weight histograms\n",
+    "    x       = array.array('f',[])\n",
+    "    y       = array.array('f',[])\n",
+    "    ex_up   = array.array('f',[])\n",
+    "    ex_down = array.array('f',[])\n",
+    "    ey_up   = array.array('f',[])\n",
+    "    ey_down = array.array('f',[])\n",
+    "    for b in xrange(1,int(weightHists[0].GetNbinsX()+1)):\n",
+    "        x.append(weightHists[0].GetBinCenter(b))\n",
+    "        y.append(weightHists[0].GetBinContent(b))\n",
+    "        ex_up.append(0.5)\n",
+    "        ex_down.append(0.5)\n",
+    "        if weightHists[1].GetBinContent(b) > weightHists[0].GetBinContent(b):\n",
+    "            ey_up.append(math.sqrt((weightHists[1].GetBinContent(b)-weightHists[0].GetBinContent(b))**2+(weightHists[0].GetBinError(b))**2))\n",
+    "            ey_down.append(math.sqrt((weightHists[0].GetBinContent(b)-weightHists[2].GetBinContent(b))**2+(weightHists[0].GetBinError(b))**2))\n",
+    "        else:\n",
+    "            ey_up.append(math.sqrt((weightHists[2].GetBinContent(b)-weightHists[0].GetBinContent(b))**2+(weightHists[0].GetBinError(b))**2))\n",
+    "            ey_down.append(math.sqrt((weightHists[0].GetBinContent(b)-weightHists[1].GetBinContent(b))**2+(weightHists[0].GetBinError(b))**2))\n",
+    "    errorBandWeight = r.TGraphAsymmErrors(len(x)-1,x,y,ex_down,ex_up,ey_down,ey_up)\n",
+    "\n",
+    "    #Draw all histograms and graphs\n",
+    "    tdrDraw(errorBandData,\"4\",r.kNone,r.kNone,r.kNone,r.kNone,3144,r.kGray)\n",
+    "    tdrDraw(dataHists[0],\"e1\",r.kFullCircle,r.kBlack)\n",
+    "    tdrDraw(MCHist,\"e1p\",r.kFullCircle,r.kGreen,r.kNone,r.kGreen,r.kNone,r.kNone)\n",
+    "    tdrDraw(MCHist_reweighted,\"e1p\",r.kOpenCircle,r.kGreen,r.kNone,r.kGreen,r.kNone,r.kNone)\n",
+    "    tdrDraw(errorBandWeight,\"4\",r.kNone,r.kNone,r.kNone,r.kNone,3144,r.kRed+2)\n",
+    "    tdrDraw(weightHists[0],\"e1\",r.kFullTriangleUp,r.kRed)\n",
+    "\n",
+    "    #Draw a legend\n",
+    "    leg = tdrLeg(0.5, 0.65, 0.88, 0.88)\n",
+    "    leg.AddEntry(dataHists[0],\"Data\",\"ep\")\n",
+    "    leg.AddEntry(errorBandData,\"Data Stat+Sys\",\"f\")\n",
+    "    leg.AddEntry(MCHist,\"MC\",\"ep\")\n",
+    "    leg.AddEntry(MCHist_reweighted,\"MC (Reweighted)\",\"ep\")\n",
+    "    leg.AddEntry(weightHists[0],\"Weights\",\"ep\")\n",
+    "    leg.AddEntry(errorBandWeight,\"Weight Stat+Sys\",\"f\")\n",
+    "    leg.Draw(\"same\")\n",
+    "\n",
+    "    #Set the canvas to own the histograms and graphs which are drawn\n",
+    "    hold_pointers_to_implicit_members(c)\n",
+    "\n",
+    "    print \"Canvas Successfully Made!\"\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "c = MakeCanvas(filename=\"PileupHistograms.root\")\n",
     "c.Draw()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hats-jec-2020",
+   "display_name": "hats-jec-2021",
    "language": "python",
-   "name": "hats-jec-2020"
+   "name": "hats-jec-2021"
   },
   "language_info": {
    "codemirror_mode": {
