--- a/notebooks/master/The JEC Game.ipynb
+++ b/notebooks/master/The JEC Game.ipynb
@@ -311,7 +311,7 @@
     "    jec.setJetA  ( jet['area'] )\n",
     "    jec.setRho   ( jet['rho'] )\n",
     "    #jec.setNPV   ( jet['npv'] )\n",
-    "    print jet['pt']*jec.getCorrection()"
+    "    print \"pT_jet^corr = %f\" % (jet['pt']*jec.getCorrection())"
    ]
   },
   {
@@ -347,13 +347,20 @@
     "    ptCor_shiftedDown = ptCor*(1+(-1*jecUnc.getUncertainty(0)))\n",
     "    print str(ptCor),'+',str(abs(ptCor-ptCor_shiftedUp)),'-',str(abs(ptCor-ptCor_shiftedDown))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hats-jec-2020",
+   "display_name": "hats-jec-2021",
    "language": "python",
-   "name": "hats-jec-2020"
+   "name": "hats-jec-2021"
   },
   "language_info": {
    "codemirror_mode": {
