--- a/notebooks/master/Basics.ipynb
+++ b/notebooks/master/Basics.ipynb
@@ -2,35 +2,6 @@
  "cells": [
 
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "# Loads the ROOT environment and style\n",
-    "import ROOT\n",
-    "from collections import OrderedDict\n",
-    "\n",
-    "# Imports for running with CMSSW\n",
-    "#from Analysis.JMEDAS.tdrstyle_mod14 import *\n",
-    "#from tqdm import tqdm_notebook\n",
-    "\n",
-    "# Imports for running locally\n",
-    "sys.path.append(os.path.expandvars(\"$CMSSW_BASE/src/Analysis/JMEDAS/python\"))\n",
-    "#from tdrstyle_mod14 import *\n",
-    "#from tqdm import tqdm_notebook\n",
-    "\n",
-    "#from ipywidgets import FloatProgress\n",
-    "#from IPython.display import display\n",
-    "\n",
-    "# Set the ROOT style\n",
-    "#setTDRStyle()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's plot the resulting histograms:"
+    "Now let's plot the resulting histograms. Take a look at the simple plotting script below and execute it with"
    ]
   },
   {
@@ -62,6 +33,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "python basics.py\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+   
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# Loads the ROOT environment and style\n",
+    "import ROOT\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "# Imports for running locally\n",
+    "sys.path.append(os.path.expandvars(\"$CMSSW_BASE/src/Analysis/JMEDAS/python\"))\n",
+    "\n",
+    "# Disable pop-up windows for smoother running over ssh\n",
+    "ROOT.gROOT.SetBatch(True)\n",
+    "\n",
     "f = ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root\")\n",
     "\n",
     "h_ptAK4   = f.Get(\"h_ptAK4\")\n",
