Edit ex1.1 notebook

--- a/notebooks/master/Basics.ipynb
+++ b/notebooks/master/Basics.ipynb
@@ -17,7 +17,9 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets2023.root --maxevents=2000 --maxjets=6 --maxFiles 5\n"
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \"\n",
+    "--files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt"\n",
+    "--outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets2023.root --maxevents=2000 --maxjets=6 --maxFiles 2\n",
    ]
   },
   {
@@ -81,9 +83,7 @@
     "h_mAK4.GetXaxis().SetRangeUser(0, 200)\n",
     "ROOT.gPad.SetLogy()\n",
     "\n",
-    "ROOT.enableJSVis()\n",
     "c.Draw()\n",
-    "#c.Print('plots1.png', 'png')\n",
     "#c.Print('plots1.pdf', 'pdf')\n"
    ]
   },
@@ -91,7 +91,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your histograms from step 4 above should look similar to the four plots shown below. What about AK8 jets? Add the corresponding histograms to the same canvases, they are already filled and available (draw option 'same', line color 'ROOT.kRed'). "
+    "You can open the produced pdf file with evince:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evince plots1.pdf&\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your histograms from the script should look similar to the four plots shown below. What about AK8 jets? Add the corresponding histograms to the same canvases, they are already filled and available (draw option 'same', line color 'ROOT.kRed').\n",
+    "Open basics.py with a code editor, such as gedit, nano or vim, add the needed lines for AK8 and reproduce the plots.\n",
+    "\n",
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gedit basics.py\n"
    ]
   },
   {
