--- a/notebooks/master/Basics.ipynb
+++ b/notebooks/master/Basics.ipynb
@@ -17,8 +17,8 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \"\n",
-    "--files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt"\n",
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \ \n",
+    "--files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt \ \n",
     "--outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets2023.root --maxevents=2000 --maxjets=6 --maxFiles 2\n",
     "\n"
    ]
