Edit ex1.1 notebook

--- a/notebooks/master/Basics.ipynb
+++ b/notebooks/master/Basics.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets2023.root --maxevents=2000 --maxjets=6 --maxFiles 2\n",
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets2023.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root --maxevents=2000 --maxjets=6 --maxFiles 2\n",
     "\n"
    ]
   },
@@ -83,7 +83,7 @@
     "ROOT.gPad.SetLogy()\n",
     "\n",
     "c.Draw()\n",
-    "#c.Print('plots1.pdf', 'pdf')\n"
+    "c.SaveAs('plots1.pdf', 'pdf')\n"
    ]
   },
   {
