Update pileup exercises

--- a/notebooks/master/Pileup_Reweighting.ipynb
+++ b/notebooks/master/Pileup_Reweighting.ipynb
@@ -46,6 +46,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the above process is finished, execute the simple plotting script below with 'python pileup_reweighting.py' and open the produced pdf."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -57,7 +64,8 @@
     "\n",
     "inf = r.TFile(\"PileupHistograms.root\",\"READ\")\n",
     "c = MakeCanvas(filename=\"PileupHistograms.root\")\n",
-    "c.Draw()"
+    "c.Draw()",
+    "c.Print('pileup_reweighting.pdf','pdf')"
    ]
   },
   {
