--- a/notebooks/master/Pileup.ipynb
+++ b/notebooks/master/Pileup.ipynb
@@ -7,26 +7,8 @@
     "# Measuring pileup\n",
     "Before we get into mitigating pileup effects, let's first examine measures of pileup in more detail. We will discuss event-by-event variables that can be used to characterize the pileup and this will give us some hints into thinking about how to deal with it.\n",
     "\n",
-    "If you are familiar with the ROOT command line (clang) then all of the quantities we want to look at can be computed interactively. However, to move things along we have provided a set of python commands which will display the necessary information."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### RUN THIS CELL ONLY IF YOU ARE USING SWAN \n",
-    "import os\n",
-    "\n",
-    "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '{}/x509up_u{}'.format(os.environ[\"HOME\"],00000)\n",
-    "if os.path.isfile(os.environ['X509_USER_PROXY']): \n",
-    "    print(\"Found proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
-    "else: \n",
-    "    print(\"Failed to find proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
-    "os.environ['X509_CERT_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/certificates'\n",
-    "os.environ['X509_VOMS_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/vomsdir'"
+    "If you are familiar with the ROOT command line (clang) then all of the quantities we want to look at can be computed interactively. However, to move things along we have provided a set of python commands which will display the necessary information.",
+    "Take a look at the pileup.py script below before executing it with 'python pileup.py' and opening the produced plot with evince.
    ]
   },
   {
@@ -42,8 +24,7 @@
     "\n",
     "# Set the ROOT style\n",
     "r.gROOT.Macro(\"rootlogon.C\")\n",
-    "setTDRStyle()\n",
-    "r.enableJSVis()"
+    "setTDRStyle()\n"
    ]
   },
   {
