--- a/notebooks/master/Pileup.ipynb
+++ b/notebooks/master/Pileup.ipynb
@@ -8,7 +8,7 @@
     "Before we get into mitigating pileup effects, let's first examine measures of pileup in more detail. We will discuss event-by-event variables that can be used to characterize the pileup and this will give us some hints into thinking about how to deal with it.\n",
     "\n",
     "If you are familiar with the ROOT command line (clang) then all of the quantities we want to look at can be computed interactively. However, to move things along we have provided a set of python commands which will display the necessary information.",
-    "Take a look at the pileup.py script below before executing it with 'python pileup.py' and opening the produced plot with evince.
+    "Take a look at the pileup.py script below before executing it with 'python pileup.py' and opening the produced plot with evince."
    ]
   },
   {
