--- a/notebooks/master/Jet_Types_and_Algorithms.ipynb
+++ b/notebooks/master/Jet_Types_and_Algorithms.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Exercise: Reconstructed vs. Generator-Level Jets\n",
     "\n",
-    "Execute the following cell to make some more jet histograms, this time from QCD MC. "
+    "Execute the following script to make some more jet histograms, this time from QCD MC. "
    ]
   },
   {
@@ -46,24 +46,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### RUN THIS CELL ONLY IF YOU ARE USING SWAN \n",
-    "import os\n",
-    "\n",
-    "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '/eos/home-X/Y/tmp/x509up_u0000'\n",
-    "if os.path.isfile(os.environ['X509_USER_PROXY']): pass\n",
-    "else: print(\"os.environ['X509_USER_PROXY'] \",os.environ['X509_USER_PROXY'])\n",
-    "os.environ['X509_CERT_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/certificates'\n",
-    "os.environ['X509_VOMS_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/vomsdir'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/QCD_Pt_470to600.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/qcd_470to600.root --maxevents=10000 --maxFiles 5 --maxjets=2\n"
    ]
   },
@@ -71,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...and then make the plots:"
+    "...and then make the plots by executing the below 'jet_types_and_algorithms.py' script."
    ]
   },
   {
