--- a/notebooks/master/Jet_Types_and_Algorithms.ipynb
+++ b/notebooks/master/Jet_Types_and_Algorithms.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the agreement isn't very good! Can you guess why?\n",
+    "Open the produced plot with 'evince jet_types_and_algorithms.pdf'. As you can see, the agreement isn't very good! Can you guess why?\n",
     "\n",
     "<details>\n",
     "<summary>\n",
@@ -157,7 +157,7 @@
    "source": [
     "## Exercise: Comparing jet areas between AK4 and AK8\n",
     "\n",
-    "Run the cell below to plot a comparison of the jets areas between AK4 and AK8 jets. A priori, what type of distribution do you expect?"
+    "Run the below script 'jet_cone_sizes.py' to plot a comparison of the jets areas between AK4 and AK8 jets. A priori, what type of distribution do you expect?"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try modifying the above cell to add vertical lines at area values corresponding to $\\pi R^2$. Do the histogram peaks line up with these values?\n",
+    "Try modifying the plotting script to add vertical lines at area values corresponding to $\\pi R^2$. Do the histogram peaks line up with these values?\n",
     "\n",
     "<details>\n",
     "<summary>\n",
