Polish ex 2.2 notebook

--- a/notebooks/master/Pileup_Reweighting.ipynb
+++ b/notebooks/master/Pileup_Reweighting.ipynb
@@ -5,8 +5,22 @@
    "metadata": {},
    "source": [
     "# Pileup Reweighting \n",
-    "Here we are going to produce a file containing the weights used for pileup reweighting. Please note that this process can take quite a while. Be patient!\n",
-    "\n",
+    "Here we are going to produce a file containing the weights used for pileup reweighting. Please note that this process can take quite a while. Execute the following command in your ssh session and be patient!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/python/pileupCorr.py -j $CMSSW_BASE/src/Analysis/JMEDAS/data/Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.txt -l $CMSSW_BASE/src/Analysis/JMEDAS/data/pileup_latest.txt -b 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the meantime, the first question is asked here, at the beginning of this section, in order to give you a chance to think about the answers before you produce the plots. Ask yourself what pileup reweighting is doing. Try to answer the questions and do the exercise before looking at the answer."
    ]
   },
@@ -35,21 +49,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "%%bash\n",
-    "python $CMSSW_BASE/src/Analysis/JMEDAS/python/pileupCorr.py -j $CMSSW_BASE/src/Analysis/JMEDAS/data/Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.txt -l $CMSSW_BASE/src/Analysis/JMEDAS/data/pileup_latest.txt -b 100"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the above process is finished, execute the simple plotting script below with 'python pileup_reweighting.py' and open the produced pdf."
+    "Once the process is finished, execute the simple plotting script below with 'python pileup_reweighting.py' and open the produced pdf."
    ]
   },
   {
