--- a/notebooks/master/Jet_Energy_Corrections.ipynb
+++ b/notebooks/master/Jet_Energy_Corrections.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Jet Energy Corrections\n",
     "\n",
-    "From exercise 2, recall the comparison of PFJets with GenJets:"
+    "From the previous exercise, recall the comparison of PFJets with GenJets. Let's plot a reco-jet vs gen-jet comparison again for a refresher with the below script 'JEC_part1.py' and open the produced jec_part1.pdf."
    ]
   },
   {
@@ -96,7 +96,8 @@
    "source": [
     "## Exercise: Before and after JECs\n",
     "\n",
-    "Let's check the GenJets-PFJets agreement after applying the JECs:"
+    "Let's check the GenJets-PFJets agreement after applying the JECs with the 'JEC_part2.py' script.\n",
+    "Have a look at the script (shown below), execute it and open the produced plot. Compare the result to what you saw in the previous step with uncorrected jets."
    ]
   },
   {
@@ -220,7 +221,7 @@
     "h_ptUpAK4.Fill( corrUp * uncorrJet.pt() )\n",
     "```\n",
     "\n",
-    "Run the next cell to plot a comparison of the nominal and varied histograms."
+    "Now run the script JEC_uncertainty.py to plot a comparison of the nominal and varied histograms."
    ]
   },
   {
