--- a/notebooks/master/Jet_Energy_Corrections.ipynb
+++ b/notebooks/master/Jet_Energy_Corrections.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Jet Energy Corrections\n",
     "\n",
-    "From the previous exercise, recall the comparison of PFJets with GenJets. Let's plot a reco-jet vs gen-jet comparison again for a refresher with the below script 'JEC_part1.py' and open the produced jec_part1.pdf."
+    "From the previous exercise, recall the comparison of PFJets with GenJets. Let's plot a reco-jet vs gen-jet comparison again for a refresher with the below script 'JEC_part1.py' and open the produced JEC_part1.pdf."
    ]
   },
   {
