Polish ex3 notebook

--- a/notebooks/master/Jet_Energy_Corrections.ipynb
+++ b/notebooks/master/Jet_Energy_Corrections.ipynb
@@ -71,7 +71,6 @@
    },
    "outputs": [],
    "source": [
-    "%%bash\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets2023.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets_corr.root --maxevents=2000 --maxjets=6 --maxFiles 10 --correctJets Fall17_17Nov2017_V32_MC\n"
    ]
   },
@@ -97,7 +96,7 @@
     "## Exercise: Before and after JECs\n",
     "\n",
     "Let's check the GenJets-PFJets agreement after applying the JECs with the 'JEC_part2.py' script.\n",
-    "Have a look at the script (shown below), execute it and open the produced plot. Compare the result to what you saw in the previous step with uncorrected jets."
+    "Have a look at the script (shown below), execute it and open the produced two plots. Inspect the plots carefully to see the differences between corrected, uncorrected and generator-level jets."
    ]
   },
   {
@@ -221,7 +220,7 @@
     "h_ptUpAK4.Fill( corrUp * uncorrJet.pt() )\n",
     "```\n",
     "\n",
-    "Now run the script JEC_uncertainty.py to plot a comparison of the nominal and varied histograms."
+    "Now run the script JEC_uncertainty.py (shown below) to plot a comparison of the nominal and varied jet energy spectra. Does the result make sense? Is the nominal histogram always between the up and down variations, and should it be?"
    ]
   },
   {
