--- a/notebooks/master/Jet_Resolution.ipynb
+++ b/notebooks/master/Jet_Resolution.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "You can see that the smearing scales the difference between the reconstructed and truth-level jet $p_{\\mathrm{T}}$s. The smearing value is taken from the function `getJER()`. \n",
     "\n",
-    "Run the cell below to create histograms with the JER smearing applied. As usual, open `jmedas_make_histograms.py` again, and understand what the `getJER()` function does.  "
+    "Run the below command in cmslpc to create histograms with the JER smearing applied. As usual, open `jmedas_make_histograms.py` again, and understand what the `getJER()` function does.  "
    ]
   },
   {
@@ -41,32 +41,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### RUN THIS CELL ONLY IF YOU ARE USING SWAN \n",
-    "import os\n",
-    "\n",
-    "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '/eos/home-X/Y/tmp/x509up_u0000'\n",
-    "if os.path.isfile(os.environ['X509_USER_PROXY']): pass\n",
-    "else: print(\"os.environ['X509_USER_PROXY'] \",os.environ['X509_USER_PROXY'])\n",
-    "os.environ['X509_CERT_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/certificates'\n",
-    "os.environ['X509_VOMS_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/vomsdir'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets_corr_smear.root --maxevents=2000 --maxFiles 10 --maxjets=2 --correctJets Fall17_17Nov2017_V32_MC --smearJets\n"
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets2023.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets_corr_smear.root --maxevents=2000 --maxFiles 10 --maxjets=2 --correctJets Fall17_17Nov2017_V32_MC --smearJets\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...and run the following cell to plot the histograms. \n",
+    "...and run the JER_part1.py script to plot the histograms. Open the produced plot with evince. \n",
     "\n",
     "For our sample, which has a larger effect, jet energy correction uncertainty, or jet energy resolution uncertainty?\n"
    ]
@@ -117,7 +99,7 @@
     "## Dijet resonance peaks\n",
     "As a final exercise for the first part of this exercise, let's look at a simple dijet resonance peak. The following cell will produce histograms from an MC sample of Randall-Sundrum gravitons (RSGs) with m=3 TeV decaying to two quarks. The resulting signature is two high-$p_{\\mathrm{T}}$ jets, with a truth-level invariant mass of 3 TeV. \n",
     "\n",
-    "While the code is running, look at the script (scripts/jmedas_dijet.py). "
+    "Execute the below commands in terminal and while the code is running, look at the script (scripts/jmedas_dijet.py). Hint: you can execute all the processes at once by copy-pasteing all rows from the below script box at once."
    ]
   },
   {
@@ -126,7 +108,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_dijet.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_qq_3000GeV.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_qq_3000GeV.root --maxevents=4000 --maxjets=6\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_dijet.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_qq_3000GeV.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_qq_3000GeV_corr.root --maxevents=4000 --maxjets=6 --correctJets Fall17_17Nov2017_V32_MC\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_dijet.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_qq_3000GeV.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_qq_3000GeV_smear.root --maxevents=4000 --maxjets=6 --smearJets\n",
@@ -137,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...and then plot the resulting histograms."
+    "...and then plot the resulting histograms with script JER_part2.py shown below."
    ]
   },
   {
