Edit JER notebook

--- a/notebooks/master/Jet_Resolution.ipynb
+++ b/notebooks/master/Jet_Resolution.ipynb
@@ -99,7 +99,7 @@
     "## Dijet resonance peaks\n",
     "As a final exercise for the first part of this exercise, let's look at a simple dijet resonance peak. The following cell will produce histograms from an MC sample of Randall-Sundrum gravitons (RSGs) with m=3 TeV decaying to two quarks. The resulting signature is two high-$p_{\\mathrm{T}}$ jets, with a truth-level invariant mass of 3 TeV. \n",
     "\n",
-    "Execute the below commands in terminal and while the code is running, look at the script (scripts/jmedas_dijet.py). Hint: you can execute all the processes at once by copy-pasteing all rows from the below script box at once."
+    "Execute the below commands in terminal and while the code is running, look at the script (scripts/jmedas_dijet.py). Hint: you can execute all the processes at once by copy-pasteing all rows from the below script box at once. Be patient, this takes a while."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...and then plot the resulting histograms with script JER_part2.py shown below."
+    "...and then plot the resulting histograms with script JER_part2.py shown below. Open the produced plot and take a good look at how the smearing and jet energy corrections affect the dijet mass peak."
    ]
   },
   {
